# java-jna-jni

./: .gitignore  README.md  settings.gradle
java-jna/: build.gradle  settings.gradle
java-jna/src/main/java/java_jna/: App.java  Filter.java
java-jna/src/test/java/java_jna/: FilterTest.java
java-jni/: build.gradle  settings.gradle
java-jni/src/main/java/jni_demo/: App.java  Filter.java
java-jni/src/test/java/jni_demo/: FilterTest.java
native/: CMakeLists.txt  build.gradle  settings.gradle
native/src/: filter.cpp  filter_jna.cpp  filter_jni.cpp
native/src/include/: filter.hpp  filter_jna.h  jni_demo_Filter.h
